improve gradlew 8.1.1